[package]
name = "texture-bevy-egui-app"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

